@@ -1,5 +1,8 @@
 shady-KISS-skin History
 -------------------------------------------
+2016-01-12:
+- Added EPG-images in displaymenudetailepg and plug-tvguideng-detail
+
 2016-01-08:
 - Added setup for numbering in main- and setupmenu
 
